--- a/3-string.ipynb
+++ b/3-string.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,7 @@
     }
    ],
    "source": [
+    "# python count from 0 and if you count inversly you can count from -1\n",
     "text = \"python\"\n",
     "print(text[0]) # first chracter (P)\n",
     "print(text[-1]) # last chracter (n)"
@@ -136,15 +137,17 @@
      "text": [
       "khali\n",
       "khalil\n",
-      "Gholamnia\n"
+      "Gholamnia\n",
+      "6\n"
      ]
     }
    ],
    "source": [
     "text = \"khalilGholamnia\"\n",
-    "print(text[0:5]) # extract \"lhali\"\n",
+    "print(text[0:5]) # extract \"Khali\"\n",
     "print(text[:6]) # extract Khalil\n",
-    "print(text[6:]) # extract Gholamnia"
+    "print(text[6:]) # extract Gholamnia\n",
+    "print(text.index(\"G\")) # it shows index each chracter"
    ]
   },
   {
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,14 +167,18 @@
      "output_type": "stream",
      "text": [
       "HI KHALIL GHOLAMNIA\n",
-      "hi khalil gholamnia\n"
+      "hi khalil gholamnia\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "message = \"Hi khalil Gholamnia\"\n",
+    "message = \"hi khalil gholamnia\"\n",
     "print(message.upper()) # convert to uppercase\n",
-    "print(message.lower()) # conver to lovercase"
+    "print(message.lower()) # conver to lovercase\n",
+    "print(message.isupper()) # print that there is upper chracter in words True or false\n",
+    "print(message.islower()) # print that there is upper chracter in words True or false"
    ]
   },
   {
@@ -376,6 +383,33 @@
     "| **Replace Substring** | `\"Hi\".replace(\"Hi\", \"Hello\")`  | `\"Hello\"`  |\n",
     "| **Split String** | `\"A B C\".split()`  | `[\"A\", \"B\", \"C\"]`  |\n",
     "| **Join List to String** | `\" \".join([\"A\", \"B\", \"C\"])`  | `\"A B C\"`  |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The \\n (newline escape sequence) tells Python to move the following text to a new line.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Khalil\\Gholamnia\n",
+      "Khalil\n",
+      "Gholamnia\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Khalil\\Gholamnia\")\n",
+    "print(\"Khalil\\nGholamnia\") #n\\ move Gholamnia to next line\n"
    ]
   },
   {
